--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "carousel-js": "^4.0.0",
+    "navigate": "^0.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-icon": "^1.0.0",
     "react-icons": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router": "^6.2.2",
-    "react-router-dom": "^6.2.2",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "translate": "^1.4.1",
