--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
+    "prettier": "2.7.1",
     "tailwindcss": "^3.1.4",
     "webpack": "^5.73.0"
   }
